# jwt-analyzer

./: .gitignore  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  hie.yaml  jwt-analyzer.cabal
app/: Main.hs
src/JWT/: Analysis.hs  Parser.hs  Vulnerability.hs
test/JWT/: ParserSpec.hs
